<resources>
    <string name="app_name">La Pinza</string>
    <string name="sign_up"><u>Sign up</u></string>
    <string name="sign_up_non_underline">Sign up</string>
    <string name="log_in"><u>Log In</u></string>
    <string name="log_in_non_underline">Log In</string>
    <string name="send_a_new_code"><u>Send a new code</u></string>
    <string name="dummy_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.\n\nIt has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged</string>
    <string name="dummy_text_with_list">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.\n\nIt has survived not only five centuries, \n\u2022 but also the leap into electronic typesetting \n\u2022 Remaining essentially unchanged.  \n\u2022 Suspendisse eleifend arcu sed odio eleifend, a sodales orci facilisis. \n\u2022 Ut ut ipsum quis neque maximus faucibus eget a ante. \n\u2022 Phasellus sit amet nulla nec velit euismod consequat dictum bibendum tellus. \n\u2022 Quisque ac nunc vulputate, accumsan metus ut, dignissim velit.</string>
    <string name="dummy_title">Welcome to Fone</string>
    <string-array name="array_city">
        <item>City</item>
        <item>New York</item>
        <item>LA</item>
        <item>California</item>
    </string-array>
    <string-array name="array_sort">
        <item>Newest</item>
        <item>Top</item>
        <item>Useful</item>
        <item>Relevance</item>
    </string-array>
    <string-array name="country_codes">
        <item>93,AF</item>
        <item>355,AL</item>
        <item>213,DZ</item>
        <item>376,AD</item>
        <item>244,AO</item>
        <item>672,AQ</item>
        <item>54,AR</item>
        <item>374,AM</item>
        <item>297,AW</item>
        <item>61,AU</item>
        <item>43,AT</item>
        <item>994,AZ</item>
        <item>973,BH</item>
        <item>880,BD</item>
        <item>375,BY</item>
        <item>32,BE</item>
        <item>501,BZ</item>
        <item>229,BJ</item>
        <item>975,BT</item>
        <item>591,BO</item>
        <item>387,BA</item>
        <item>267,BW</item>
        <item>55,BR</item>
        <item>673,BN</item>
        <item>359,BG</item>
        <item>226,BF</item>
        <item>95,MM</item>
        <item>257,BI</item>
        <item>855,KH</item>
        <item>237,CM</item>
        <item>1,CA</item>
        <item>238,CV</item>
        <item>236,CF</item>
        <item>235,TD</item>
        <item>56,CL</item>
        <item>86,CN</item>
        <item>61,CX</item>
        <item>61,CC</item>
        <item>57,CO</item>
        <item>269,KM</item>
        <item>242,CG</item>
        <item>243,CD</item>
        <item>682,CK</item>
        <item>506,CR</item>
        <item>385,HR</item>
        <item>53,CU</item>
        <item>357,CY</item>
        <item>420,CZ</item>
        <item>45,DK</item>
        <item>253,DJ</item>
        <item>670,TL</item>
        <item>593,EC</item>
        <item>20,EG</item>
        <item>503,SV</item>
        <item>240,GQ</item>
        <item>291,ER</item>
        <item>372,EE</item>
        <item>251,ET</item>
        <item>500,FK</item>
        <item>298,FO</item>
        <item>679,FJ</item>
        <item>358,FI</item>
        <item>33,FR</item>
        <item>689,PF</item>
        <item>241,GA</item>
        <item>220,GM</item>
        <item>995,GE</item>
        <item>49,DE</item>
        <item>233,GH</item>
        <item>350,GI</item>
        <item>30,GR</item>
        <item>299,GL</item>
        <item>502,GT</item>
        <item>224,GN</item>
        <item>245,GW</item>
        <item>592,GY</item>
        <item>509,HT</item>
        <item>504,HN</item>
        <item>852,HK</item>
        <item>36,HU</item>
        <item>91,IN</item>
        <item>62,ID</item>
        <item>98,IR</item>
        <item>964,IQ</item>
        <item>353,IE</item>
        <item>44,IM</item>
        <item>972,IL</item>
        <item>39,IT</item>
        <item>225,CI</item>
        <item>81,JP</item>
        <item>962,JO</item>
        <item>7,KZ</item>
        <item>254,KE</item>
        <item>686,KI</item>
        <item>965,KW</item>
        <item>996,KG</item>
        <item>856,LA</item>
        <item>371,LV</item>
        <item>961,LB</item>
        <item>266,LS</item>
        <item>231,LR</item>
        <item>218,LY</item>
        <item>423,LI</item>
        <item>370,LT</item>
        <item>352,LU</item>
        <item>853,MO</item>
        <item>389,MK</item>
        <item>261,MG</item>
        <item>265,MW</item>
        <item>60,MY</item>
        <item>960,MV</item>
        <item>223,ML</item>
        <item>356,MT</item>
        <item>692,MH</item>
        <item>222,MR</item>
        <item>230,MU</item>
        <item>262,YT</item>
        <item>52,MX</item>
        <item>691,FM</item>
        <item>373,MD</item>
        <item>377,MC</item>
        <item>976,MN</item>
        <item>382,ME</item>
        <item>212,MA</item>
        <item>258,MZ</item>
        <item>264,NA</item>
        <item>674,NR</item>
        <item>977,NP</item>
        <item>31,NL</item>
        <item>599,AN</item>
        <item>687,NC</item>
        <item>64,NZ</item>
        <item>505,NI</item>
        <item>227,NE</item>
        <item>234,NG</item>
        <item>683,NU</item>
        <item>850,KP</item>
        <item>47,NO</item>
        <item>968,OM</item>
        <item>92,PK</item>
        <item>680,PW</item>
        <item>507,PA</item>
        <item>675,PG</item>
        <item>595,PY</item>
        <item>51,PE</item>
        <item>63,PH</item>
        <item>870,PN</item>
        <item>48,PL</item>
        <item>351,PT</item>
        <item>1,PR</item>
        <item>974,QA</item>
        <item>40,RO</item>
        <item>7,RU</item>
        <item>250,RW</item>
        <item>590,BL</item>
        <item>685,WS</item>
        <item>378,SM</item>
        <item>239,ST</item>
        <item>966,SA</item>
        <item>221,SN</item>
        <item>381,RS</item>
        <item>248,SC</item>
        <item>232,SL</item>
        <item>65,SG</item>
        <item>421,SK</item>
        <item>386,SI</item>
        <item>677,SB</item>
        <item>252,SO</item>
        <item>27,ZA</item>
        <item>82,KR</item>
        <item>34,ES</item>
        <item>94,LK</item>
        <item>290,SH</item>
        <item>508,PM</item>
        <item>249,SD</item>
        <item>597,SR</item>
        <item>268,SZ</item>
        <item>46,SE</item>
        <item>41,CH</item>
        <item>963,SY</item>
        <item>886,TW</item>
        <item>992,TJ</item>
        <item>255,TZ</item>
        <item>66,TH</item>
        <item>228,TG</item>
        <item>690,TK</item>
        <item>676,TO</item>
        <item>216,TN</item>
        <item>90,TR</item>
        <item>993,TM</item>
        <item>688,TV</item>
        <item>971,AE</item>
        <item>256,UG</item>
        <item>44,GB</item>
        <item>380,UA</item>
        <item>598,UY</item>
        <item>1,US</item>
        <item>998,UZ</item>
        <item>678,VU</item>
        <item>39,VA</item>
        <item>58,VE</item>
        <item>84,VN</item>
        <item>681,WF</item>
        <item>967,YE</item>
        <item>260,ZM</item>
        <item>263,ZW</item>
    </string-array>
    <string-array name="array_shipping_method">
        <item>Choose a method</item>
        <item>DHL</item>
        <item>Regular</item>
        <item>Cargo</item>
    </string-array>
    <string name="inicio">Inicio</string>
    <string name="crear">Crear</string>
    <string name="perfil">Perfil</string>
    <string name="bandeja">Bandeja</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>
    <string name="shop_your_favorite">Shop your favorite</string>
    <string name="personalise_your_favorite_brand_by_following_the_top_brands">Personalise your favorite brand by following the top brands</string>
    <string name="_1_piece">1 piece</string>
    <string name="_4_5">$4.5</string>
    <string name="womens_top">Womens Top</string>
    <string name="hey_when_will_my_order_arrive">Hey! When will my order arrive</string>
    <string name="_2_00_pm">2.00 pm</string>
    <string name="blue">Blue</string>
    <string name="move_to_bag">Move to Bag</string>
    <string name="color">Color:</string>
    <string name="m">M</string>
    <string name="size">Size:</string>
    <string name="_4_99">$4.99</string>
    <string name="_3_99">$3.99</string>
    <string name="_2percent">-10%</string>
    <string name="main_stream">Main Stream</string>
    <string name="spring_collection">Spring Collection</string>
    <string name="_20_off">20% OFF</string>
    <string name="for_selected_spring_style">For Selected Spring Style</string>
    <string name="up_to_70_off">Up to 70% OFF</string>
    <string name="goldstar">GoldStar</string>
    <string name="_1">1</string>
    <string name="add">+</string>
    <string name="subtract">-</string>
    <string name="earnings">Earnings</string>
    <string name="online">Online</string>
    <string name="_3_items_30_june_2020">3 items|30 June 2020</string>
    <string name="_5_30">$5.30</string>
    <string name="_75_00">$75.00</string>
    <string name="order_num_21215">Order Num 21215</string>
    <string name="x">x</string>
    <string name="nike_t_shirt">Nike T- Shirt</string>
    <string name="_20">$20</string>
    <string name="_3_items">3 items</string>
    <string name="order_no_25465612">Order no. 25465612</string>
    <string name="_20_50">$20.50</string>
    <string name="_20_january_12_35am">20 January, 12:35am</string>
    <string name="ram_dhakal">Ram Dhakal</string>
    <string name="_30_00">$30.00</string>
    <string name="_64_items_left">64 items left</string>
    <string name="summer_wear_top">Summer wear top</string>
    <string name="bank_info">Bank Info</string>
    <string name="account_holder_name">Account Holder Name</string>
    <string name="bank_name">Bank Name</string>
    <string name="branch_code">Branch Code</string>
    <string name="account_number">Account Number</string>
    <string name="enter_amount_to_transfer">Enter amount to transfer</string>
    <string name="company_policy">Company Policy</string>
    <string name="available_balance">Available Balance</string>
    <string name="_500_56">$500.56</string>
    <string name="send_to_bank">Send to Bank</string>
    <string name="_100000">$1000</string>
    <string name="delivered_successfully">Delivered Successfully !</string>
    <string name="thank_you_for_deliver_safely_and_on_time">Thank you for deliver safely\nand on time.</string>
    <string name="total_km">Total Km</string>
    <string name="view_order_info">View Order Info</string>
    <string name="your_earning">Your Earning</string>
    <string name="view_earnings">View Earnings</string>
    <string name="_40_50">$40.50</string>
    <string name="back_to_home">Back to Home</string>
    <string name="collection_of_greatness">Collection of Greatness</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="_18_min_6_5_km">18 min (6.5 km)</string>
    <string name="todo">TODO</string>
    <string name="_1012809823904802384023">1012809823904802384023</string>
    <string name="sdvlie">SDVLIE</string>
    <string name="bank_of_america">Bank of America</string>
    <string name="tom_hardy">Tom Hardy</string>
</resources>