<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="@dimen/_5sdp"
    android:paddingBottom="@dimen/_5sdp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="4">

        <TextView
            android:id="@+id/tvTransactionName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/order_num_21215"
            android:textColor="@color/colorBlack"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvTotalCash"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_75_00"
            android:textColor="@color/colorBlack"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvCash"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="right|center"
            android:text="@string/_5_30"
            android:textColor="@color/colorBlack"
            android:textSize="15sp"
            android:textStyle="bold"
            tools:ignore="RtlHardcoded" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/_3sdp"
        android:weightSum="4">

        <TextView
            android:id="@+id/tvTransactionInfo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/_3_items_30_june_2020"
            android:textColor="@color/colorBlack"
            android:textSize="12sp"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/tvCashInfo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/online"
            android:textColor="@color/colorBlack"
            android:textSize="12sp"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/tvCashDetail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/earnings"
            android:gravity="right|center"
            android:textColor="@color/colorBlack"
            android:textSize="12sp"
            tools:ignore="RtlHardcoded,SmallSp" />
    </LinearLayout>
</LinearLayout>