<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:weightSum="3">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:paddingBottom="@dimen/_10sdp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvProductName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/womens_top"
            android:textColor="@color/colorBlack"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvProductCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_1_piece"
            android:textColor="@color/colorBlack"
            android:textSize="15sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvProductPrice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="right"
        android:text="@string/_4_5"
        android:textColor="@color/colorBlack"
        android:textSize="18sp" />
</LinearLayout>